--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,11 +4,59 @@
 
 // Variables
 @import "variables";
+@import "sign-in";
+@import "footer";
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
+#app {
+  padding-top: 3rem;
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+}
+
+.navbar .navbar-nav .nav-link {
+  font-size: 12px;
+  @extend .text-uppercase;
+}
+
+.main-banner {
+  background: #007bdf;
+  color: #fff;
+  clip-path: polygon(0 0,100% 0,100% 100%,0 94%);
+  margin-bottom: 4rem;
+  position: relative;
+  padding: 7rem 0 4rem;
+  margin-top: -4.5em;
+
+  &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: .2;
+  }
+  &__front {
+    background: rgba(#282d31, 1);
+  }
+}
+
+.btn {
+  &-round {
+    border-radius: 5em;
+    // background-color: #1bbc9b;
+    padding-left: 1em;
+    padding-right: 1em;
+    @extend .text-uppercase;
+
+    &-lg {
+      padding: 1em 2.5em;
+    }
+  }
 }
