Fixed error when updating course

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10152,3 +10152,13 @@ video {
   padding: 1em 2.5em;
 }
 
+.card-body-icon {
+  position: absolute;
+  z-index: 0;
+  top: -25px;
+  right: -25px;
+  font-size: 5rem;
+  -webkit-transform: rotate(15deg);
+          transform: rotate(15deg);
+}
+
