--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -70,3 +70,16 @@ video {
     }
   }
 }
+
+.card {
+  &-body {
+    &-icon {
+      position: absolute;
+      z-index: 0;
+      top: -25px;
+      right: -25px;
+      font-size: 5rem;
+      transform: rotate(15deg);
+    }
+  }
+}
