Added models PartialNote, Note, Question, Answer and added pictures to users

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,100 +4,15 @@
 
 // Variables
 @import "variables";
-@import "page-header";
-@import "sign-in";
-@import "footer";
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import "bootstrap-custom";
 
-img,
-video {
-  max-width: 100%;
-}
-
-#app {
-  padding-top: 3rem;
-}
-
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
-
-.navbar .navbar-nav .nav-link {
-  font-size: 14px;
-  @extend .text-uppercase;
-}
-
-.navbar.bg-transparent .navbar-nav .nav-link {
-  color: lighten(#fff, 25%);
-}
-
-.main-banner {
-  background: #007bdf;
-  color: #fff;
-  clip-path: polygon(0 0,100% 0,100% 100%,0 94%);
-  margin-bottom: 4rem;
-  position: relative;
-  padding: 7rem 0 4rem;
-  margin-top: -4.5em;
-
-  &__img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: .2;
-  }
-  &__front {
-    background: rgba(#282d31, 1);
-  }
-}
-
-.btn {
-  &-round {
-    border-radius: 5em;
-    // background-color: #1bbc9b;
-    padding-left: 1em;
-    padding-right: 1em;
-    @extend .text-uppercase;
-
-    &-lg {
-      padding: 1em 2.5em;
-    }
-  }
-}
-
-.card {
-  &-body {
-    &-icon {
-      position: absolute;
-      z-index: 0;
-      top: -25px;
-      right: -25px;
-      font-size: 5rem;
-      transform: rotate(15deg);
-    }
-  }
-}
-
-.module,
-.topic {
-  &__title &__action {
-    opacity: 0;
-    transition: opacity .3s;
-  }
-  &:hover &__action {
-    opacity: 1;
-  }
-}
-
-.no-style {
-  border: 0;
-  padding: 0;
-  outline: 0;
-  cursor: pointer;
-}
+//Components & pages
+@import "page-header";
+@import "sign-in";
+@import "footer";
+@import "topic";
+@import "banner";
+@import "course";
