Trying to get this fucking work done

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10029,6 +10029,10 @@ video {
   bottom: 10px;
 }
 
+.btn {
+  text-transform: uppercase;
+}
+
 .btn-round {
   border-radius: 5em;
   padding-left: 1em;
